Update MIT server status references

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
           <a href="/roles">Roles</a>
           <a href="/resilience">Resilience</a>
           <a href="/developer">Developer</a>
-          <a href="/observability">Observability</a>
+          <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
           <span class="auth-status" data-auth-status>Not signed in</span>
@@ -97,8 +97,8 @@
             <div class="directory-card__meta">Developer resources.</div>
           </a>
           <a class="directory-card" href="/observability">
-            <div class="directory-card__title">Observability</div>
-            <div class="directory-card__meta">Monitoring and alerts.</div>
+            <div class="directory-card__title">Server Status</div>
+            <div class="directory-card__meta">Server metrics and alerts.</div>
           </a>
         </div>
       </section>
