--- a/client/observability.html
+++ b/client/observability.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tylendar | Observability</title>
+    <title>Tylendar | Server Status</title>
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
@@ -23,7 +23,7 @@
           <a href="/roles">Roles</a>
           <a href="/resilience">Resilience</a>
           <a href="/developer">Developer</a>
-          <a href="/observability">Observability</a>
+          <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
           <span class="auth-status" data-auth-status>Not signed in</span>
@@ -33,10 +33,10 @@
       </nav>
       <section class="hero-banner">
         <div>
-          <p class="eyebrow">Observability</p>
-          <h1>Observability</h1>
+          <p class="eyebrow">Server Status</p>
+          <h1>Server status</h1>
           <p class="subheading">
-            Monitoring and alerting overview.
+            Live metrics and operational visibility.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/resilience">Check resilience</a>
@@ -49,8 +49,8 @@
     <main class="page-content">
       <section class="section">
         <div class="section-heading">
-          <h2>Observability & Alerts</h2>
-          <p>Metrics and alerts.</p>
+          <h2>Server status & alerts</h2>
+          <p>Live metrics and incident visibility.</p>
         </div>
         <div class="grid two">
           <div class="card" id="observability"></div>
