--- a/client/profiles.html
+++ b/client/profiles.html
@@ -23,7 +23,7 @@
           <a href="/roles">Roles</a>
           <a href="/resilience">Resilience</a>
           <a href="/developer">Developer</a>
-          <a href="/observability">Observability</a>
+          <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
           <span class="auth-status" data-auth-status>Not signed in</span>
@@ -55,6 +55,7 @@
         <div class="grid two">
           <div class="card" id="profile-card"></div>
           <div class="card" id="home-highlights"></div>
+          <div class="card" id="profile-management"></div>
         </div>
       </section>
     </main>
