--- a/client/developer.html
+++ b/client/developer.html
@@ -23,7 +23,7 @@
           <a href="/roles">Roles</a>
           <a href="/resilience">Resilience</a>
           <a href="/developer">Developer</a>
-          <a href="/observability">Observability</a>
+          <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
           <span class="auth-status" data-auth-status>Not signed in</span>
@@ -40,7 +40,7 @@
           </p>
           <div class="hero-actions">
             <a class="primary" href="/embed">Open embed widget</a>
-            <a class="secondary" href="/observability">Review observability</a>
+            <a class="secondary" href="/observability">Review server status</a>
           </div>
         </div>
       </section>
