--- a/client/resilience.html
+++ b/client/resilience.html
@@ -23,7 +23,7 @@
           <a href="/roles">Roles</a>
           <a href="/resilience">Resilience</a>
           <a href="/developer">Developer</a>
-          <a href="/observability">Observability</a>
+          <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
           <span class="auth-status" data-auth-status>Not signed in</span>
@@ -39,7 +39,7 @@
             Review resilience status and recovery behavior.
           </p>
           <div class="hero-actions">
-            <a class="primary" href="/observability">Open observability</a>
+            <a class="primary" href="/observability">Open server status</a>
             <a class="secondary" href="/developer">Visit developer portal</a>
           </div>
         </div>
