--- a/client/roles.html
+++ b/client/roles.html
@@ -23,7 +23,7 @@
           <a href="/roles">Roles</a>
           <a href="/resilience">Resilience</a>
           <a href="/developer">Developer</a>
-          <a href="/observability">Observability</a>
+          <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
           <span class="auth-status" data-auth-status>Not signed in</span>
