Ensure default calendar visibility and month view

--- a/client/calendar.html
+++ b/client/calendar.html
@@ -46,16 +46,21 @@
       </section>
     </header>
 
-    <main class="page-content">
-      <section class="section">
+    <main class="page-content page-content--full">
+      <section class="section section--full">
         <div class="section-heading">
           <h2>Calendar & Event Views</h2>
           <p>Review schedules and upcoming events.</p>
         </div>
-        <div class="grid two">
-          <div class="card" id="calendar-view"></div>
-          <div class="card" id="event-list"></div>
+        <div class="calendar-fullscreen" id="calendar-view"></div>
+      </section>
+
+      <section class="section">
+        <div class="section-heading">
+          <h2>Upcoming events</h2>
+          <p>Stay ahead of what is scheduled in your primary calendar.</p>
         </div>
+        <div class="card" id="event-list"></div>
       </section>
 
       <section class="section">
