Add event studio and calendar event modal

--- a/client/details.html
+++ b/client/details.html
@@ -15,6 +15,7 @@
           <a href="/profiles">Profiles</a>
           <a href="/dashboards">Dashboards</a>
           <a href="/calendar">Calendar</a>
+          <a href="/events">Event Studio</a>
           <a href="/access">Access</a>
           <a href="/messageboard">MessageBoard</a>
           <a href="/embed">Embed</a>
@@ -64,6 +65,10 @@
           <a class="directory-card" href="/calendar">
             <div class="directory-card__title">Calendar Views</div>
             <div class="directory-card__meta">Calendar planning.</div>
+          </a>
+          <a class="directory-card" href="/events">
+            <div class="directory-card__title">Event Studio</div>
+            <div class="directory-card__meta">Full-screen event creation.</div>
           </a>
           <a class="directory-card" href="/access">
             <div class="directory-card__title">Manage Access</div>
