--- a/client/dashboards.html
+++ b/client/dashboards.html
@@ -15,6 +15,7 @@
           <a href="/profiles">Profiles</a>
           <a href="/dashboards">Dashboards</a>
           <a href="/calendar">Calendar</a>
+          <a href="/events">Event Studio</a>
           <a href="/access">Access</a>
           <a href="/messageboard">MessageBoard</a>
           <a href="/embed">Embed</a>
