--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
           <a href="/profiles">Profiles</a>
           <a href="/dashboards">Dashboards</a>
           <a href="/calendar">Calendar</a>
+          <a href="/events">Event Studio</a>
           <a href="/access">Access</a>
           <a href="/messageboard">MessageBoard</a>
           <a href="/embed">Embed</a>
@@ -63,6 +64,10 @@
           <a class="directory-card" href="/calendar">
             <div class="directory-card__title">Calendar Views</div>
             <div class="directory-card__meta">Plan and review schedules.</div>
+          </a>
+          <a class="directory-card" href="/events">
+            <div class="directory-card__title">Event Studio</div>
+            <div class="directory-card__meta">Create and manage events.</div>
           </a>
           <a class="directory-card" href="/access">
             <div class="directory-card__title">Manage Access</div>
