--- a/client/observability.html
+++ b/client/observability.html
@@ -27,7 +27,7 @@
           <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
-          <span class="auth-status" data-auth-status>Not signed in</span>
+          <span class="auth-status" data-auth-status>No session yet</span>
           <button class="ghost" data-auth-trigger="login">Log in</button>
           <button class="primary" data-auth-trigger="register">Register</button>
         </div>
@@ -63,7 +63,7 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Production calendar system.</p>
+        <p>Playful calendar system for thoughtful planning.</p>
       </div>
       <div class="footer-links">
         <a href="#">Status</a>
