--- a/client/dashboards.html
+++ b/client/dashboards.html
@@ -27,7 +27,7 @@
           <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
-          <span class="auth-status" data-auth-status>Not signed in</span>
+          <span class="auth-status" data-auth-status>No session yet</span>
           <button class="ghost" data-auth-trigger="login">Log in</button>
           <button class="primary" data-auth-trigger="register">Register</button>
         </div>
@@ -35,9 +35,9 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Dashboards</p>
-          <h1>Dashboards</h1>
+          <h1>Dashboards, softly</h1>
           <p class="subheading">
-            Review account and organization status.
+            Gentle signals about your account, with the calendar always nearby.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/calendar">Open calendar</a>
@@ -51,7 +51,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Dashboards</h2>
-          <p>Monitor key activity.</p>
+          <p>Lightweight signals that support your calendar flow.</p>
         </div>
         <div class="grid two">
           <div class="card" id="user-dashboard"></div>
@@ -63,7 +63,7 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Production calendar system.</p>
+        <p>Playful calendar system for thoughtful planning.</p>
       </div>
       <div class="footer-links">
         <a href="#">Status</a>
