--- a/client/details.html
+++ b/client/details.html
@@ -27,7 +27,7 @@
           <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
-          <span class="auth-status" data-auth-status>Not signed in</span>
+          <span class="auth-status" data-auth-status>No session yet</span>
           <button class="ghost" data-auth-trigger="login">Log in</button>
           <button class="primary" data-auth-trigger="register">Register</button>
         </div>
@@ -35,13 +35,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Overview</p>
-          <h1>System overview</h1>
+          <h1>Calendar-first overview</h1>
           <p class="subheading">
-            Use this page to open the area you need.
+            Everything orbits the calendar, with sessions and permissions close at hand.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/calendar">Open calendar</a>
-            <a class="secondary" href="/dashboards">View dashboards</a>
+            <a class="secondary" href="/access">Permissions playground</a>
           </div>
         </div>
       </section>
@@ -51,19 +51,11 @@
       <section class="section">
         <div class="section-heading">
           <h2>Navigation</h2>
-          <p>Select a workspace.</p>
+          <p>Pick a cozy workspace.</p>
         </div>
         <div class="directory-grid">
-          <a class="directory-card" href="/profiles">
-            <div class="directory-card__title">Profile & Presence</div>
-            <div class="directory-card__meta">Account details.</div>
-          </a>
-          <a class="directory-card" href="/dashboards">
-            <div class="directory-card__title">Dashboards</div>
-            <div class="directory-card__meta">Status and activity.</div>
-          </a>
           <a class="directory-card" href="/calendar">
-            <div class="directory-card__title">Calendar Views</div>
+            <div class="directory-card__title">Calendar canvas</div>
             <div class="directory-card__meta">Calendar planning.</div>
           </a>
           <a class="directory-card" href="/events">
@@ -71,8 +63,16 @@
             <div class="directory-card__meta">Full-screen event creation.</div>
           </a>
           <a class="directory-card" href="/access">
-            <div class="directory-card__title">Manage Access</div>
+            <div class="directory-card__title">Permissions playground</div>
             <div class="directory-card__meta">Permissions management.</div>
+          </a>
+          <a class="directory-card" href="/profiles">
+            <div class="directory-card__title">Profile nook</div>
+            <div class="directory-card__meta">Account details.</div>
+          </a>
+          <a class="directory-card" href="/dashboards">
+            <div class="directory-card__title">Dashboards</div>
+            <div class="directory-card__meta">Status and activity.</div>
           </a>
           <a class="directory-card" href="/messageboard">
             <div class="directory-card__title">MessageBoard</div>
@@ -113,7 +113,7 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Production calendar system.</p>
+        <p>Playful calendar system for thoughtful planning.</p>
       </div>
       <div class="footer-links">
         <a href="#">Status</a>
