--- a/client/profiles.html
+++ b/client/profiles.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tylendar | Profiles</title>
+    <title>Tylendar | Session Nook</title>
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
@@ -27,7 +27,7 @@
           <a href="/observability">Server Status</a>
         </div>
         <div class="nav-actions">
-          <span class="auth-status" data-auth-status>Not signed in</span>
+          <span class="auth-status" data-auth-status>No session yet</span>
           <button class="ghost" data-auth-trigger="login">Log in</button>
           <button class="primary" data-auth-trigger="register">Register</button>
         </div>
@@ -35,9 +35,9 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Profile</p>
-          <h1>Account profile</h1>
+          <h1>Your session nook</h1>
           <p class="subheading">
-            Review and update your account details.
+            Keep your session, role, and profile details tidy and friendly.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/dashboards">View dashboards</a>
@@ -50,8 +50,8 @@
     <main class="page-content">
       <section class="section">
         <div class="section-heading">
-          <h2>User profile</h2>
-          <p>Account details and status.</p>
+          <h2>Profile & session</h2>
+          <p>Your account details, session status, and role context.</p>
         </div>
         <div class="grid two">
           <div class="card" id="profile-card"></div>
@@ -64,7 +64,7 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Production calendar system.</p>
+        <p>Playful calendar system for thoughtful planning.</p>
       </div>
       <div class="footer-links">
         <a href="#">Status</a>
